logs/dag_id=user_processing/run_id=scheduled__2022-08-28T00:00:00+00:00/task_id=store_user/attempt=2.log
[2022-08-29 15:57:57,610] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: user_processing.store_user scheduled__2022-08-28T00:00:00+00:00 [queued]>
[2022-08-29 15:57:57,620] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: user_processing.store_user scheduled__2022-08-28T00:00:00+00:00 [queued]>
[2022-08-29 15:57:57,620] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2022-08-29 15:57:57,620] {taskinstance.py:1357} INFO - Starting attempt 2 of 2
[2022-08-29 15:57:57,620] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2022-08-29 15:57:57,636] {taskinstance.py:1377} INFO - Executing <Task(PythonOperator): store_user> on 2022-08-28 00:00:00+00:00
[2022-08-29 15:57:57,643] {standard_task_runner.py:52} INFO - Started process 2297 to run task
[2022-08-29 15:57:57,648] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'user_processing', 'store_user', 'scheduled__2022-08-28T00:00:00+00:00', '--job-id', '96', '--raw', '--subdir', 'DAGS_FOLDER/user_processing.py', '--cfg-path', '/tmp/tmptit_17po', '--error-file', '/tmp/tmpwdzhcomk']
[2022-08-29 15:57:57,649] {standard_task_runner.py:80} INFO - Job 96: Subtask store_user
[2022-08-29 15:57:57,720] {task_command.py:369} INFO - Running <TaskInstance: user_processing.store_user scheduled__2022-08-28T00:00:00+00:00 [running]> on host 7f0ff65cfbf7
[2022-08-29 15:57:57,811] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=user_processing
AIRFLOW_CTX_TASK_ID=store_user
AIRFLOW_CTX_EXECUTION_DATE=2022-08-28T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=2
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2022-08-28T00:00:00+00:00
[2022-08-29 15:57:57,812] {postgres.py:127} INFO - Running copy expert: COPY users from stdin WITH DELIMITER AS ",", filename: /tmp/processed_user.csv
[2022-08-29 15:57:57,823] {base.py:68} INFO - Using connection ID 'postgres' for task execution.
[2022-08-29 15:57:57,828] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 171, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 189, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/user_processing.py", line 30, in _store_user
    filename = '/tmp/processed_user.csv')
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/hooks/postgres.py", line 135, in copy_expert
    cur.copy_expert(sql, file)
psycopg2.errors.SyntaxError: syntax error at or near "",""
LINE 1: COPY users from stdin WITH DELIMITER AS ","
                                                ^

[2022-08-29 15:57:57,838] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=user_processing, task_id=store_user, execution_date=20220828T000000, start_date=20220829T155757, end_date=20220829T155757
[2022-08-29 15:57:57,850] {standard_task_runner.py:97} ERROR - Failed to execute job 96 for task store_user (syntax error at or near "",""
LINE 1: COPY users from stdin WITH DELIMITER AS ","
                                                ^
; 2297)
[2022-08-29 15:57:57,860] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-08-29 15:57:57,900] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
